syntax = "proto3";

package user;

service UserService {
    rpc Create(CreateUserRequestDto) returns (CreateUserResponseDto) {}
    rpc SignIn(SigninDto) returns (CreateUserResponseDto) {}
}

message CreateUserRequestDto {
    string email= 2;
    string password = 3;
    optional string firstname = 4;
    optional string lastname = 5;
}

message SigninDto {
    string email = 1;
    string password = 2;
}

message CreateUserResponseDto {
    string id = 1;
    string email= 2;
    optional string firstname = 4;
    optional string lastname = 5;
}